# rpr

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  manual-release.yml  release.yml
Formula/: rpr.rb
examples/: config.json  review-guidelines.md
npm/: .gitignore  README.md  package.json
npm/scripts/: copy-python.js
scripts/: bump.sh  setup-branch-protection.sh
src/rpr/: __init__.py  cli.py
