[build-system]
# hatchling >=1.27 emits editable .pth files without a leading underscore,
# which Python 3.13's site.py would otherwise treat as "hidden" and skip.
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "rpr"
version = "0.1.0"
description = "Stealth PR reviewer — looks like you wrote every word."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "dedev-llc" }]
keywords = ["pr", "review", "github", "claude", "ai", "code-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.scripts]
rpr = "rpr.cli:main"

[project.urls]
Homepage = "https://github.com/dedev-llc/rpr"
Repository = "https://github.com/dedev-llc/rpr"
Issues = "https://github.com/dedev-llc/rpr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rpr"]

[tool.hatch.build.targets.sdist]
include = [
    "src/rpr",
    "README.md",
    "LICENSE",
    "examples",
]
